logs/validate.20260407-235932.log
Mode: isolate
<<<<<<< HEAD
Isolate: including Chap06 Chap05 Chap02
error: unexpected token, expected `;`
   --> src/Chap06/LabUnDirGraphStEph.rs:229:128
    |
229 | ...                   (exists |l: L::V| #![trigger le_view.contains((e.0, e.1, l))] le_view.contains((e.0, e.1, l))) by {
    |                                                                                                                      ^^

error[E0425]: cannot find type `LabUnDirGraphStEph` in this scope
   --> src/Chap06/LabUnDirGraphStEph.rs:590:49
    |
590 |     impl<V: HashOrd, L: StT + Hash> Display for LabUnDirGraphStEph<V, L> {
    |                                                 ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabUnDirGraphStEph` in this scope
   --> src/Chap06/LabUnDirGraphStEph.rs:596:47
    |
596 |     impl<V: HashOrd, L: StT + Hash> Debug for LabUnDirGraphStEph<V, L> {
    |                                               ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabUnDirGraphStEphIter` in this scope
   --> src/Chap06/LabUnDirGraphStEph.rs:602:36
    |
602 |     impl<'a, V: HashOrd> Debug for LabUnDirGraphStEphIter<'a, V> {
    |                                    ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabUnDirGraphStEphIter` in this scope
   --> src/Chap06/LabUnDirGraphStEph.rs:606:38
    |
606 |     impl<'a, V: HashOrd> Display for LabUnDirGraphStEphIter<'a, V> {
    |                                      ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabUnDirGraphStEphGhostIterator` in this scope
   --> src/Chap06/LabUnDirGraphStEph.rs:610:36
    |
610 |     impl<'a, V: HashOrd> Debug for LabUnDirGraphStEphGhostIterator<'a, V> {
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabUnDirGraphStEphGhostIterator` in this scope
   --> src/Chap06/LabUnDirGraphStEph.rs:614:38
    |
614 |     impl<'a, V: HashOrd> Display for LabUnDirGraphStEphGhostIterator<'a, V> {
    |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 3s
Sampled Memory Usage: peak rust_verify RSS: 1651MB, peak z3 RSS: 185MB, min free: 23970MB
Sampled CPU Usage: rust_verify: 18s, z3 children: 6s
=======
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error: postcondition not satisfied
   --> src/Chap37/AVLTreeSeqStEph.rs:814:63
    |
123 |             AVLTreeSeqStEphS { root: None, next_key: 0 }
    |             -------------------------------------------- at the end of the function body
...
814 |             ensures tree.spec_seq() =~= Seq::<T::V>::empty(), tree.spec_avltreeseqsteph_wf();
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ failed this postcondition

note: diagnostics via expansion
   --> src/Chap37/AVLTreeSeqStEph.rs:814:63
    |
814 |             ensures tree.spec_seq() =~= Seq::<T::V>::empty(), tree.spec_avltreeseqsteph_wf();
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: 

%return.spec_seq() =~= empty() ✔
%return.spec_avltreeseqsteph_wf() ✘
    trait function (note: expand-errors is currently limited in its support for resolving generic trait functions)

verification results:: 1957 verified, 1 errors
error: aborting due to 1 previous error

Elapsed: 19s
Sampled Memory Usage: peak rust_verify RSS: 4189MB, peak z3 RSS: 648MB, min free: 21231MB
Sampled CPU Usage: rust_verify: 58s, z3 children: 61s
>>>>>>> agent4/ready
